Add Chatboat to Home Page

--- a/Styles/root.css
+++ b/Styles/root.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #263F5A;
-  --secondary-color:#F8627B;
+  --secondary-color:rgb(248, 98, 123);
   --bg-light: #f9fafb;
   --Lighttext-color: #000000;
   --darktext-color:white;
